<resources>
    <string name="app_name">PCR</string>
    <string name="search">Поиск устройств</string>
    <string name="connect">Подключиться</string>
    <string name="work_with_pcr">Работа с СИР</string>
    <string name="disconnect">Отключиться</string>
    <string name="connect_type">Тип подключения</string>
    <string name="tcp_connect">Wifi подключение</string>
    <string name="bluetooth_connect">Bluetooth подключение</string>
    <string name="requirements">Необходимо подключиться к сети в названии которой есть PMSK_PNR</string>
    <string name="connect_to_wifi">Подключить сеть</string>
    <string name="update">Обновить</string>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="contin">Далее</string>
    <string name="address">Сетевой адрес:</string>
    <string name="find_device">Найти прибор</string>
    <string name="write_weight">Запись ЦИ / Дата-времени</string>
    <string name="find_channel">Поиск канала</string>
    <string name="read_archive">Чтение архивов</string>
    <string name="write_read_values">Запись/чтение значений</string>
</resources>