<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_type"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/bluetooth"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/bluetooth_connect"/>

    <Button
        android:id="@+id/tcp"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/tcp_connect"/>

</LinearLayout>