<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/req"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/requirements"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/line"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_wifi"
            app:layout_constraintLeft_toRightOf="@+id/line"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/req"/>

        <Button
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/update"
            app:layout_constraintLeft_toRightOf="@+id/line"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connect"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/ip"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/port"
        android:inputType="number"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/ip"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/contin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contin"
        app:layout_constraintTop_toBottomOf="@+id/port"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>